--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,3 +1,17 @@
 .footer {
-  background-color: fade-out($secondary, 0.1);
+    background-color: fade-out($secondary, 0.1);
+
+    .social {
+        a {
+            padding-right: 15px;
+        }
+
+        a:last-of-type {
+            padding-right: 0px;
+        }
+
+        a:hover {
+            color: darken($white, 20%);
+        }
+    }
 }
